[package]
name = "rust-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }


[[bin]]
name="broadcast"
path="src/examples/broadcast.rs"

[[bin]]
name="bst"
path="src/examples/bst.rs"

[[bin]]
name="tuple"
path="src/examples/tuple.rs"

[[bin]]
name="array"
path="src/examples/array.rs"

[[bin]]
name="slice"
path="src/examples/slice.rs"

[[bin]]
name="func"
path="src/examples/func.rs"

[[bin]]
name="control"
path="src/examples/control.rs"